# Game-Dev

./: Achievements.cpp  Achievements.h  CMakeLists.txt  Game.cpp  Game.h  Placeholder.h  Player.cpp  Player.h  README.md  Simulator.cpp  Simulator.h  gameCreator.cpp  gameCreator.h  gameManager.cpp  gameManager.h  horrorGame.cpp  horrorGame.h  main.cpp  storyGame.cpp  storyGame.h
headers/: Achievements.h  Game.h  Player.h  Profit.h  Simulator.h  gameCreator.h  gameManager.h  horrorGame.h  storyGame.h
src/: Achievements.cpp  Game.cpp  Player.cpp  Simulator.cpp  gameCreator.cpp  gameManager.cpp  horrorGame.cpp  storyGame.cpp
